# dev-elgawharafactory

./: README.md  license.txt  pyproject.toml
.github/workflows/: ci.yml
dev_elgawharafactory/: hooks.py  modules.txt  patches.txt  tasks.py
dev_elgawharafactory/data_import/: salary_components.json
dev_elgawharafactory/dev_elgawharafactory/doctype/employee_overtime_policy/: employee_overtime_policy.json  employee_overtime_policy.py
dev_elgawharafactory/dev_elgawharafactory/doctype/employee_penalties/: employee_penalties.json  employee_penalties.py
dev_elgawharafactory/dev_elgawharafactory/doctype/employee_penalty/: employee_penalty.js  employee_penalty.json  employee_penalty.py  test_employee_penalty.py
dev_elgawharafactory/dev_elgawharafactory/doctype/extra_day_allowance_designation/: extra_day_allowance_designation.json  extra_day_allowance_designation.py
dev_elgawharafactory/dev_elgawharafactory/doctype/late_entry_penalty/: late_entry_penalty.js  late_entry_penalty.json  late_entry_penalty.py  test_late_entry_penalty.py
dev_elgawharafactory/dev_elgawharafactory/report/customer_accounts/: customer_accounts.json
dev_elgawharafactory/dev_elgawharafactory/report/customer_accounts_brief/: customer_accounts_brief.json
dev_elgawharafactory/dev_elgawharafactory/report/employee_daily_attendance/: employee_daily_attendance.js  (+2 more)
dev_elgawharafactory/overrides/: employee_checkin.py
dev_elgawharafactory/patches/post_model_sync/: import_salary_components.py
dev_elgawharafactory/tasks/: employee_additional_salary.py
dev_elgawharafactory/www/: login.html
(+10 files in other folders)
